# mr_text_c-

./: #*mr_text-eshell*#  *mr_text-eshell*  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  text.txt
docs/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile.docs  Makefile  cmake_install.cmake  mainpage.md
include/mrText/: mrText.hpp
main/: #main.cpp#  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lib.cpp  mrText.cpp  template_impls.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  testlib.cpp
